--- a/templates/login.html
+++ b/templates/login.html
@@ -11,9 +11,9 @@
             padding:0;
             font-family: sans-serif;
             background-color: #313131;
-            /*background-image: url("https://wallpaperaccess.com/full/4050729.png");
+            background-image: url("https://wallpaperaccess.com/full/4050729.png");
             background-repeat: no-repeat;
-            background-size: cover;*/
+            background-size: cover;
             
         }
         .login-box{
@@ -59,7 +59,7 @@
             background: none;
             border: 2px solid #4caf50;
             color: white;
-            padding: 8px 40%;
+            padding: 8px;
             font-size: 18px;
             cursor: pointer;
             margin: 12px 0;
@@ -69,16 +69,17 @@
 <body>
     <div class="login-box">
         <h1>Login</h1>
-        <div class="textbox">
-            <i class="fa fa-user" aria-hidden="true"></i>
-            <input type="text" placeholder="Username" name="usrname" id="" required>
-        </div>
-        <div class="textbox">
-            <i class="fa fa-lock" aria-hidden="true"></i>
-            <input type="password" placeholder="Password" name="pswrd" id="" required>
-        </div>
-        <br>
-        <a class="btn" href='Schedule.html'>Sign in</a>
+        <form action="#" method="POST">
+            <div class="textbox">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                <input type="text" placeholder="Username" name="usrname" id="" >
+            </div>
+            <div class="textbox">
+                <i class="fa fa-lock" aria-hidden="true"></i>
+                <input type="password" placeholder="Password" name="pswrd" id="" >
+            </div>
+            <input class="btn" type="submit" value="Sign in">
+        </form>
     </div>
 </body>
 </html>
